================================ Next release ================================


========================== Release 0.4.0 2012-02-26 ==========================

Backward-incompatible changes:
    - piped.log is deprecated and the standard Python logging module should
      be used instead.

    - ``piped -l`` now no longer is the name of a file to log to, but the name
      of a logging configuration file. See the ``logging.yaml`` file included
      in the piped distribution for example usage.


========================== Release 0.3.2 2012-02-18 ==========================

Internal changes:
    - piped.dependencies.DependencyMap now has a ``.get_dependency(key)`` method
      that returns the dependency object for the given key in the dependency
      map.


========================== Release 0.3.1 2012-02-15 ==========================

Features:
    - ZooKeeper: A ZooKeeper-contrib is now available, for interacting
      with ZooKeeper ensembles. In addition to a ZooKeeper-client
      provider, a few processors were added as well.

    - AMQP: Support for providing AMQP-connections, consuming messages
      and processing them in pipelines, as well as a simple helper
      for creating and providing AMQP-based RPC-clients.

    - Cyclone: Support for Cyclone applications (http://cyclone.io), which
      is an implementation of Tornado (http://tornadoweb.org) on top of
      Twisted. This enables building full-fledged web-apps that use the
      dependency/resource management/pipelines in piped.

    - Built-in and contrib providers now use "processor: ..." instead
        of "pipeline: ...", and are able to depend on arbitrary dependencies.
        The dependencies are invoked with the baton as the first and
        only argument.

        This makes it easier for one provider to call a function on another
        provider.

    - Different twisted reactors can now be selected by using the